# mkapi

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  config.py  index.html  mkapi-material.css  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  ruff_defaults.toml  setup.cfg  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  starship.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  docs.yaml  docs.yml  publish.yaml
api/example/: index.html
api/examples/: index.html
api/mkapi/: index.html
docs/: 2.md  examples.md  extra.css  google_style.md  index.md  library.py  link.py  numpy_style.md  options.md  release.md  test.md  type.py
docs/api/: mkapi.core.base.md  mkapi.core.docstring.md  mkapi.plugins.mkdocs.md  package.md  package.module_a.md  package.module_b.md  package.subpackage.md  package.subpackage.module_c.md  package.subpackage.module_d.md
docs/appendix/: decorator.md  filter.md  inherit.md  method.md  order.md  test.md  type.py
docs/examples/: google_style.md  numpy_style.md
docs/src/: examples.md
docs/stylesheets/: extra.css
docs/usage/: config.md  custom.md  decorator.py  depth.md  embed.md  filter.md  inherit.md  library.py  module.md  object.md  page.md  styles.md  type.py  writing.md
example/: mod_a.py
example/sub/: __init__.py  mod_b.py
examples/: custom.py  example.py  filter.py  foobar.py  google_style.py  inherit.py  inherit_comment.py  link.py  link2.py  meta.py  mkdocs.yml  numpy_style.py  script.py
examples/appendix/: a.py  abc.py  b.py  decorated.py  decorator.py  inherit.py  member_order_sub.py  method.py
examples/docs/: 1.md  3.md  4.md  example.md  index.md
examples/example/: google.py
examples/imports/: a.py  b.py  c.py
examples/link/: qualname.py
examples/package/: __init__.py  module_a.py  module_b.py
examples/styles/: __init__.py  google.py  numpy.py
examples/typing/: current.py  future.py
examples_old/: __init__.py  custom.py  mkdocs.yml
examples_old/cls/: decorated.py  member_order_sub.py
examples_old/docs/: 1.md  custom.css
mkapi/: __init__.py  main.py  utils.py
mkapi/core/: __init__.py  annotation.py  attribute.py  base.py  code.py  converter.py  docstring.py  inherit.py  inspect.py  linker.py  markdown.py  module.py  node.py  object.py  page.py  postprocess.py  preprocess.py  regex.py  renderer.py  signature.py  source.py  structure.py  tree.py
mkapi/plugins/: api.py  mkdocs.py  preprocess.py
mkapi/templates/: args.jinja2  base.jinja2  bases.jinja2  code.jinja2  docstring.jinja2  header.jinja2  item.jinja2  items.jinja2  macros.jinja2  member.jinja2  module.jinja2  node.jinja2  node_heading.jinja2  object.jinja2  object_div.jinja2  object_heading.jinja2  object_member.jinja2  page.jinja2  plain.jinja2  returns.jinja2
mkapi/theme/: mkapi.yml
search/: search_index.json
src/back/: pages.py  renderers.py  signatures.py
src/example/: index.html
src/examples/: index.html
src/mkapi/: __about__.py  __init__.py  ast.py  base.py  config.py  converter.py  converters.py  dataclasses.py  doc.py  docs.py  docstring.py  docstrings.py  elements.py  file.py  filter.py  globals.py  importlib.py  index.html  inspect.py  items.py  link.py  linkers.py  main.py  markdown.py  modules.py  names.py  nav.py  node.py  nodes.py  object.py  objects.py  page.py  pages.py  parser.py  parsers.py  plugin.py  plugins.py  renderer.py  renderers.py  signatures.py  (+1 more)
src/old/: docstrings copy.py  utils.py
tests/: conftest.py  test_ast.py  test_config.py  test_converters.py  test_dataclass.py  test_docstring.py  test_elements.py  test_globals.py  test_importlib.py  test_inspect.py  test_items.py  test_link.py  test_linkers.py  test_main.py  test_markdown.py  test_modules.py  test_nav.py  test_nodes.py  test_objects.py  test_page.py  test_pages.py  test_parser.py  test_parsers.py  test_plugin.py  test_plugins.py  test_polars.py  test_renderer.py  test_renderers.py  test_signatures.py  test_temp.py  test_utils.py
tests/ast/: test_args.py  test_arguments.py  test_assign.py  test_attrs.py  test_defs.py  test_eval.py  test_expr.py  test_items.py  test_node.py
tests/converters/: test_converter.py  test_iter.py  test_markdown.py  test_merge.py  test_signature.py
tests/core/: test_core_abc.py  test_core_attribute.py  test_core_base.py  test_core_code.py  test_core_docstring.py  test_core_docstring_class.py  test_core_docstring_error.py  test_core_docstring_from_text.py  test_core_docstring_functions.py  test_core_docstring_generator.py  test_core_docstring_module.py  test_core_docstring_module_level_function.py  test_core_inherit.py  test_core_inspect.py  test_core_link.py  test_core_linker.py  test_core_module.py  test_core_node.py  test_core_node_init.py  test_core_object.py  test_core_page.py  test_core_postprocess.py  test_core_preprocess.py  test_core_signature.py  test_mro.py
tests/dataclasses/: test_deco.py  test_params.py
tests/doc/: conftest.py  test_doc.py  test_google.py  test_numpy.py
tests/docs/: test_doc.py  test_google.py  test_numpy.py
tests/docstring/: test_examples.py  test_google.py  test_numpy.py
tests/docstrings/: conftest.py  test_docstring.py  test_docstrings.py  test_google.py  test_merge.py  test_numpy.py
tests/elements/: conftest.py  test_elements.py
tests/example/: __init__.py  mod_a.py
tests/examples/: __init__.py  _usage.py  a.py  b.py  mod_a.py  object.py  parser.py  usage.py
tests/inspect/: test_google.py  test_inspect.py  test_inspect_annotation.py  test_inspect_attribute.py  test_inspect_signature.py  test_inspect_signature_typecheck.py  test_inspect_typing.py  test_transformer.py
tests/items/: test_item.py  test_merge.py
tests/libraries/: test_altair.py  test_polars.py  test_schemdraw.py
tests/node/: test_example.py  test_members.py  test_node.py  test_nodes.py  test_parse.py  test_resolve.py
tests/nodes/: test_node.py  test_nodes.py  test_parse.py  test_resolve.py
tests_old/: conftest.py
theme/: a.py  mkdocs.yml
theme/docs/: index.md
(+308 files in other folders)
