[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkapi"
version = "4.0.0"
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
description = "A plugin for MkDocs to generate API documentation"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: MkDocs",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
  "astdoc>=0.2.0",
  "jinja2",
  "mkdocs-material",
  "mkdocs>=1.6.0",
  "rich",
  "tomli>=1.1.0; python_version<'3.11'",
]

[project.urls]
Documentation = "https://daizutabi.github.io/mkapi/"
Source = "https://github.com/daizutabi/mkapi"
Issues = "https://github.com/daizutabi/mkapi/issues"

[project.entry-points."mkdocs.plugins"]
mkapi = "mkapi.plugin:MkApiPlugin"

[tool.uv]
dev-dependencies = [
  "pytest-clarity",
  "pytest-cov",
  "pytest-randomly",
  "pytest-xdist",
]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/mkapi"]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--cov=mkapi", "--cov-report=lcov:lcov.info"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
filterwarnings = [
  'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
  'ignore:\nPyarrow will become a required dependency:DeprecationWarning',
]

[tool.coverage.run]
disable_warnings = ["module-not-measured"]

[tool.coverage.report]
exclude_lines = [
  "except ImportError",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["tests/examples/*.py", "example/*.py"]

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F401"]
ignore = [
  "A005",
  "ANN002",
  "ANN003",
  "ARG001",
  "ARG002",
  "D",
  "FBT001",
  "FBT002",
  "PERF401",
  "PGH003",
  "PLR2004",
  "SIM102",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG", "FBT", "PLR", "RUF", "S"]
